--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,6 @@
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "images/icon.png"
+    "default_icon": "images/icon_inactive.png"
   }
 }
